--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "jquery": "~2.1.1",
     "orchestrate": "~0.3.1",
     "hbsfy": "~2.0.0",
-    "handlebars": "~2.0.0-alpha.4"
+    "handlebars": "~2.0.0-alpha.4",
+    "async": "~0.9.0",
+    "kew": "~0.4.0",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "browserify": "~5.9.1"
