added the semantics3 api for product data

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "handlebars": "~2.0.0-alpha.4",
     "async": "~0.9.0",
     "kew": "~0.4.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "semantics3-node": "0.0.1"
   },
   "devDependencies": {
     "browserify": "~5.9.1"
