added the spin.js package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "async": "~0.9.0",
     "kew": "~0.4.0",
     "lodash": "~2.4.1",
-    "semantics3-node": "0.0.1"
+    "semantics3-node": "0.0.1",
+    "spin.js": "~2.0.1"
   },
   "devDependencies": {
     "browserify": "~5.9.1"
