--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.2.0",
     "handlebars": "~2.0.0-alpha.4",
     "hbsfy": "~2.0.0",
+    "instagram-node-lib": "^0.1.1",
     "jquery": "~2.1.1",
     "kew": "~0.4.0",
     "lodash": "~2.4.1",
