--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "lodash": "~2.4.1",
     "semantics3-node": "0.0.1",
     "spin.js": "~2.0.1",
-    "browserify": "~5.9.1"
+    "browserify": "~5.9.1",
+    "bcrypt": "~0.8.0",
+    "moment": "~2.8.1",
+    "jwt-simple": "~0.2.0"
   }
 }
